Removed relation comment -> book from book entity. BookDto added. BookService rewrited to work with new dto object.