@@ -5,15 +5,16 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.transaction.annotation.Transactional;
+import ru.otus.library.dto.BookDto;
 import ru.otus.library.models.Author;
 import ru.otus.library.models.Book;
 import ru.otus.library.models.Comment;
 import ru.otus.library.models.Genre;
 
 import javax.persistence.EntityManager;
-import java.util.Collections;
+import javax.persistence.TypedQuery;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -29,41 +30,48 @@ public class BookServiceIntegrationTest {
     @DisplayName("correctly save book")
     @Transactional
     public void shouldAddBook() {
-        final long BOOK_ID = 12;
-        final String BOOK_TITLE = "The book Title";
-        Book newBook = new Book(BOOK_ID, BOOK_TITLE,
-                Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
-        assertThat(em.find(Book.class, BOOK_ID)).isNull();
+        final String BOOK_TITLE = "The New Title";
+        final String FIRST_AUTHOR = "First Author";
+        final String SECOND_AUTHOR = "Second Author";
+        BookDto newBook = new BookDto();
+        newBook.setTitle(BOOK_TITLE);
+        newBook.setAuthors(List.of(new Author(FIRST_AUTHOR), new Author(SECOND_AUTHOR)));
+        assertThat(bookService.getAllBooks()).hasSize(10)
+                .doesNotContain(newBook);
 
         bookService.addBook(newBook);
 
-        assertThat(em.find(Book.class, BOOK_ID)).isEqualTo(newBook)
-            .matches(b -> b.getTitle().equals(BOOK_TITLE))
-            .matches(b -> b.getComments() != null && b.getComments().size() == 0)
-            .matches(b -> b.getAuthors() != null && b.getAuthors().size() == 0)
-            .matches(b -> b.getGenres() != null && b.getGenres().size() == 0);
+        assertThat(bookService.findBookByTitle(BOOK_TITLE).getAuthors()).isEqualTo(newBook.getAuthors());
+
+        assertThat(bookService.getAllBooks()).hasSize(11)
+                .contains(newBook);
     }
 
     @Test
     @DisplayName("correctly save book with comments")
     @Transactional
     public void shouldAddBookWithComments() {
+        assertThat(bookService.getAllBooks()).hasSize(10);
         final String BOOK_TITLE = "The book Title";
         final String COMMENT1 = "Great book! Love it.";
         final String COMMENT2 = "I read this book long ago";
-        Comment comment1 = new Comment(COMMENT1);
-        Comment comment2 = new Comment(COMMENT2);
-        Book newBook = new Book(BOOK_TITLE);
-        newBook.setComments(List.of(comment1, comment2));
-        assertThat(em.find(Book.class, newBook.getId())).isNull();
+        BookDto newBook = new BookDto();
+        newBook.setTitle(BOOK_TITLE);
+        newBook.setComments(List.of(new Comment(COMMENT1), new Comment(COMMENT2)));
 
-        bookService.addBook(newBook);
+        assertThat(bookService.getAllBooks()).hasSize(10)
+                .doesNotContain(newBook);
 
-        assertThat(em.find(Book.class, newBook.getId())).isEqualTo(newBook)
-                .matches(b -> b.getTitle().equals(BOOK_TITLE), "has expected title")
-                .matches(b -> b.getComments() != null && b.getComments().size() == 2, "has expected comments")
-                .matches(b -> b.getAuthors() == null, "has expected authors")
-                .matches(b -> b.getGenres() == null, "has expected genres");
+        var insertedBook = bookService.addBook(newBook);
+
+        assertThat(bookService.getAllBooks()).hasSize(11)
+                .contains(newBook);
+        assertThat(insertedBook.getComments()).hasSize(2)
+                .extracting(Comment::getMessage).containsExactlyInAnyOrder(COMMENT1, COMMENT2);
+        assertThat(em.find(Comment.class, insertedBook.getComments().get(0).getId())).isNotNull()
+                .isEqualTo(newBook.getComments().get(0));
+        assertThat(em.find(Comment.class, insertedBook.getComments().get(1).getId())).isNotNull()
+                .isEqualTo(newBook.getComments().get(1));
     }
 
     @Test
@@ -75,17 +83,23 @@ public class BookServiceIntegrationTest {
         final String AUTHOR2 = "Second Author";
         Author author1 = new Author(AUTHOR1);
         Author author2 = new Author(AUTHOR2);
-        Book newBook = new Book(BOOK_TITLE);
+        BookDto newBook = new BookDto();
+        newBook.setTitle(BOOK_TITLE);
         newBook.setAuthors(List.of(author1, author2));
-        assertThat(em.find(Book.class, newBook.getId())).isNull();
 
-        bookService.addBook(newBook);
+        assertThat(bookService.getAllBooks()).hasSize(10)
+                .doesNotContain(newBook);
 
-        assertThat(em.find(Book.class, newBook.getId())).isEqualTo(newBook)
-                .matches(b -> b.getTitle().equals(BOOK_TITLE), "has expected title")
-                .matches(b -> b.getComments() == null, "has expected comments")
-                .matches(b -> b.getAuthors() != null && b.getAuthors().size() == 2, "has expected authors")
-                .matches(b -> b.getGenres() == null, "has expected genres");
+        var insertedBook = bookService.addBook(newBook);
+
+        assertThat(bookService.getAllBooks()).hasSize(11)
+                .contains(newBook);
+        assertThat(insertedBook.getAuthors()).hasSize(2)
+                .extracting(Author::getName).containsExactlyInAnyOrder(AUTHOR1, AUTHOR2);
+        assertThat(em.find(Author.class, insertedBook.getAuthors().get(0).getId())).isNotNull()
+                .isEqualTo(newBook.getAuthors().get(0));
+        assertThat(em.find(Author.class, insertedBook.getAuthors().get(1).getId())).isNotNull()
+                .isEqualTo(newBook.getAuthors().get(1));
     }
 
     @Test
@@ -97,17 +111,23 @@ public class BookServiceIntegrationTest {
         final String GENRE2 = "Second Genre";
         Genre genre1 = new Genre(GENRE1);
         Genre genre2 = new Genre(GENRE2);
-        Book newBook = new Book(BOOK_TITLE);
+        BookDto newBook = new BookDto();
+        newBook.setTitle(BOOK_TITLE);
         newBook.setGenres(List.of(genre1, genre2));
-        assertThat(em.find(Book.class, newBook.getId())).isNull();
 
-        bookService.addBook(newBook);
+        assertThat(bookService.getAllBooks()).hasSize(10)
+                .doesNotContain(newBook);
 
-        assertThat(em.find(Book.class, newBook.getId())).isEqualTo(newBook)
-                .matches(b -> b.getTitle().equals(BOOK_TITLE), "has expected title")
-                .matches(b -> b.getComments() == null, "has expected comments")
-                .matches(b -> b.getAuthors() == null, "has expected authors")
-                .matches(b -> b.getGenres() != null && b.getGenres().size() == 2, "has expected genres");
+        var insertedBook = bookService.addBook(newBook);
+
+        assertThat(bookService.getAllBooks()).hasSize(11)
+                .contains(newBook);
+        assertThat(insertedBook.getGenres()).hasSize(2)
+                .extracting(Genre::getName).containsExactlyInAnyOrder(GENRE1, GENRE2);
+        assertThat(em.find(Genre.class, insertedBook.getGenres().get(0).getId())).isNotNull()
+                .isEqualTo(newBook.getGenres().get(0));
+        assertThat(em.find(Genre.class, insertedBook.getGenres().get(1).getId())).isNotNull()
+                .isEqualTo(newBook.getGenres().get(1));
     }
 
     @Test
@@ -127,22 +147,37 @@ public class BookServiceIntegrationTest {
         Comment comment2 = new Comment(COMMENT2);
         Genre genre1 = new Genre(GENRE1);
         Genre genre2 = new Genre(GENRE2);
-        Book newBook = new Book(BOOK_TITLE);
+        BookDto newBook = new BookDto();
+        newBook.setTitle(BOOK_TITLE);
         newBook.setComments(List.of(comment1, comment2));
         newBook.setAuthors(List.of(author1, author2));
         newBook.setGenres(List.of(genre1, genre2));
-        assertThat(em.find(Book.class, newBook.getId())).isNull();
 
-        bookService.addBook(newBook);
+        assertThat(bookService.getAllBooks()).hasSize(10)
+                .doesNotContain(newBook);
 
-        assertThat(em.find(Book.class, newBook.getId())).isEqualTo(newBook)
-                .matches(b -> b.getTitle().equals(BOOK_TITLE), "has expected title")
-                .matches(b -> b.getComments() != null &&
-                        b.getComments().containsAll(List.of(comment1, comment2)), "has expected comments")
-                .matches(b -> b.getAuthors() != null &&
-                        b.getAuthors().containsAll(List.of(author1, author2)), "has expected authors")
-                .matches(b -> b.getGenres() != null &&
-                        b.getGenres().containsAll(List.of(genre1, genre2)), "has expected genres");
+        var insertedBook = bookService.addBook(newBook);
+
+        assertThat(bookService.getAllBooks()).hasSize(11)
+                .contains(newBook);
+        assertThat(insertedBook.getComments()).hasSize(2)
+                .extracting(Comment::getMessage).containsExactlyInAnyOrder(COMMENT1, COMMENT2);
+        assertThat(em.find(Comment.class, insertedBook.getComments().get(0).getId())).isNotNull()
+                .isEqualTo(newBook.getComments().get(0));
+        assertThat(em.find(Comment.class, insertedBook.getComments().get(1).getId())).isNotNull()
+                .isEqualTo(newBook.getComments().get(1));
+        assertThat(insertedBook.getAuthors()).hasSize(2)
+                .extracting(Author::getName).containsExactlyInAnyOrder(AUTHOR1, AUTHOR2);
+        assertThat(em.find(Author.class, insertedBook.getAuthors().get(0).getId())).isNotNull()
+                .isEqualTo(newBook.getAuthors().get(0));
+        assertThat(em.find(Author.class, insertedBook.getAuthors().get(1).getId())).isNotNull()
+                .isEqualTo(newBook.getAuthors().get(1));
+        assertThat(insertedBook.getGenres()).hasSize(2)
+                .extracting(Genre::getName).containsExactlyInAnyOrder(GENRE1, GENRE2);
+        assertThat(em.find(Genre.class, insertedBook.getGenres().get(0).getId())).isNotNull()
+                .isEqualTo(newBook.getGenres().get(0));
+        assertThat(em.find(Genre.class, insertedBook.getGenres().get(1).getId())).isNotNull()
+                .isEqualTo(newBook.getGenres().get(1));
     }
 
     @Test
@@ -163,11 +198,18 @@ public class BookServiceIntegrationTest {
         final String EXPECTED_AUTHOR = "Stephen King";
         final String EXPECTED_GENRE1 = "horror";
         final String EXPECTED_GENRE2 = "novel";
-        assertThat(bookService.findBookByTitle(BOOK_TITLE)).isNotNull()
-                .matches(book -> book.getAuthors().get(0).getName().equals(EXPECTED_AUTHOR))
-                .matches(book -> book.getGenres().stream()
-                        .map(Genre::getName)
-                        .collect(Collectors.toList()).containsAll(List.of(EXPECTED_GENRE1, EXPECTED_GENRE2)));
+        final String EXPECTED_COMMENT1 = "Scary book!";
+        final String EXPECTED_COMMENT2 = "JUST AMAZING";
+
+        var book = bookService.findBookByTitle(BOOK_TITLE);
+
+        assertThat(book).isNotNull().isInstanceOf(BookDto.class);
+        assertThat(book.getAuthors()).extracting(Author::getName)
+                .containsExactlyInAnyOrder(EXPECTED_AUTHOR);
+        assertThat(book.getGenres()).extracting(Genre::getName)
+                .containsExactlyInAnyOrder(EXPECTED_GENRE1, EXPECTED_GENRE2);
+        assertThat(book.getComments()).extracting(Comment::getMessage)
+                .containsExactlyInAnyOrder(EXPECTED_COMMENT1, EXPECTED_COMMENT2);
     }
 
     @Test
@@ -179,12 +221,19 @@ public class BookServiceIntegrationTest {
         final String EXPECTED_AUTHOR = "Stephen King";
         final String EXPECTED_GENRE1 = "horror";
         final String EXPECTED_GENRE2 = "novel";
-        assertThat(bookService.findBookById(BOOK_ID)).isNotNull()
-                .matches(book -> book.getTitle().equals(BOOK_TITLE))
-                .matches(book -> book.getAuthors().get(0).getName().equals(EXPECTED_AUTHOR))
-                .matches(book -> book.getGenres().stream()
-                        .map(Genre::getName)
-                        .collect(Collectors.toList()).containsAll(List.of(EXPECTED_GENRE1, EXPECTED_GENRE2)));
+        final String EXPECTED_COMMENT1 = "Scary book!";
+        final String EXPECTED_COMMENT2 = "JUST AMAZING";
+
+        var book = bookService.findBookById(BOOK_ID);
+
+        assertThat(book).isNotNull().isInstanceOf(BookDto.class);
+        assertThat(book.getTitle()).isEqualTo(BOOK_TITLE);
+        assertThat(book.getAuthors()).extracting(Author::getName)
+                .containsExactlyInAnyOrder(EXPECTED_AUTHOR);
+        assertThat(book.getGenres()).extracting(Genre::getName)
+                .containsExactlyInAnyOrder(EXPECTED_GENRE1, EXPECTED_GENRE2);
+        assertThat(book.getComments()).extracting(Comment::getMessage)
+                .containsExactlyInAnyOrder(EXPECTED_COMMENT1, EXPECTED_COMMENT2);
     }
 
     @Test
@@ -196,18 +245,26 @@ public class BookServiceIntegrationTest {
         final String EXPECTED_AUTHOR1 = "Arkady Strugatsky";
         final String EXPECTED_AUTHOR2 = "Boris Strugatsky";
         final String NEW_AUTHOR_NAME = "Author Name";
-        Book bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
+        BookDto bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
         assertThat(bookBeforeUpdate.getAuthors())
                 .hasSize(EXPECTED_SIZE)
                 .extracting(Author::getName).containsExactly(EXPECTED_AUTHOR1,
                 EXPECTED_AUTHOR2);
 
         Author newAuthor = new Author(NEW_AUTHOR_NAME);
-        bookService.addBookAuthor(bookBeforeUpdate, newAuthor);
-        assertThat(bookService.findBookByTitle(BOOK_TITLE).getAuthors())
+
+        var bookAfterUpdate = bookService.addBookAuthor(bookBeforeUpdate, newAuthor);
+
+        assertThat(bookAfterUpdate.getAuthors())
+                .hasSize(EXPECTED_SIZE + 1)
                 .extracting(Author::getName).containsExactly(EXPECTED_AUTHOR1,
-                EXPECTED_AUTHOR2, NEW_AUTHOR_NAME)
-                .hasSize(EXPECTED_SIZE + 1);
+                EXPECTED_AUTHOR2, NEW_AUTHOR_NAME);
+        assertThat(em.find(Book.class, bookAfterUpdate.getId()).getAuthors())
+                .extracting(Author::getName).contains(NEW_AUTHOR_NAME);
+        assertThat(em.find(Author.class, bookAfterUpdate.getAuthors().get(2).getId()))
+                .isEqualTo(bookAfterUpdate.getAuthors().get(2));
     }
 
     @Test
@@ -218,16 +275,24 @@ public class BookServiceIntegrationTest {
         final int EXPECTED_SIZE = 1;
         final String EXPECTED_GENRE = "fantasy";
         final String NEW_GENRE = "science non-fiction";
-        Book bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
+        BookDto bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
         assertThat(bookBeforeUpdate.getGenres())
                 .hasSize(EXPECTED_SIZE)
                 .extracting(Genre::getName).containsExactly(EXPECTED_GENRE);
 
         Genre newGenre = new Genre(NEW_GENRE);
-        bookService.addBookGenre(bookBeforeUpdate, newGenre);
-        assertThat(bookService.findBookByTitle(BOOK_TITLE).getGenres())
-                .extracting(Genre::getName).containsExactly(EXPECTED_GENRE, NEW_GENRE)
-                .hasSize(EXPECTED_SIZE + 1);
+
+        var bookAfterUpdate = bookService.addBookGenre(bookBeforeUpdate, newGenre);
+
+        assertThat(bookAfterUpdate.getGenres())
+                .hasSize(EXPECTED_SIZE + 1)
+                .extracting(Genre::getName).containsExactly(EXPECTED_GENRE, NEW_GENRE);
+        assertThat(em.find(Book.class, bookAfterUpdate.getId()).getGenres())
+                .extracting(Genre::getName).contains(EXPECTED_GENRE, NEW_GENRE);
+        assertThat(em.find(Genre.class, bookAfterUpdate.getGenres().get(1).getId()))
+                .isEqualTo(bookAfterUpdate.getGenres().get(1));
     }
 
     @Test
@@ -236,17 +301,29 @@ public class BookServiceIntegrationTest {
     public void shouldAddBookComment() {
         final String BOOK_TITLE = "The Roadside Picnic";
         final int EXPECTED_SIZE = 2;
+        final String EXPECTED_COMMENT1 = "Greatest book ever!";
+        final String EXPECTED_COMMENT2 = "I read this book as a child.";
         final String NEW_COMMENT = "I `m going to read this book";
-        Book bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
+        BookDto bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
         assertThat(bookBeforeUpdate.getComments())
                 .hasSize(EXPECTED_SIZE)
-                .extracting(Comment::getMessage).doesNotContain(NEW_COMMENT);
+                .extracting(Comment::getMessage).containsExactlyInAnyOrder(EXPECTED_COMMENT1,
+                EXPECTED_COMMENT2);
 
         Comment newComment = new Comment(NEW_COMMENT);
-        bookService.addBookComment(bookBeforeUpdate, newComment);
-        assertThat(bookService.findBookByTitle(BOOK_TITLE).getComments())
-                .extracting(Comment::getMessage).contains(NEW_COMMENT)
-                .hasSize(EXPECTED_SIZE + 1);
+
+        var bookAfterUpdate = bookService.addBookComment(bookBeforeUpdate, newComment);
+
+        assertThat(bookAfterUpdate.getComments())
+                .hasSize(EXPECTED_SIZE + 1)
+                .extracting(Comment::getMessage).containsExactlyInAnyOrder(EXPECTED_COMMENT1,
+                EXPECTED_COMMENT2, NEW_COMMENT);
+        long insertedBookId = bookAfterUpdate.getComments().stream()
+                .filter(comment -> comment.getMessage().equals(NEW_COMMENT)).findFirst().get().getId();
+        assertThat(em.find(Comment.class, insertedBookId))
+                .extracting(Comment::getMessage).isEqualTo(NEW_COMMENT);
     }
 
     @Test
@@ -257,18 +334,22 @@ public class BookServiceIntegrationTest {
         final int EXPECTED_SIZE = 2;
         final String EXPECTED_AUTHOR1 = "Arkady Strugatsky";
         final String EXPECTED_AUTHOR2 = "Boris Strugatsky";
-        Book bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
+        BookDto bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
         assertThat(bookBeforeUpdate.getAuthors())
                 .hasSize(EXPECTED_SIZE)
-                .extracting(Author::getName).containsExactly(EXPECTED_AUTHOR1,
+                .extracting(Author::getName).containsExactlyInAnyOrder(EXPECTED_AUTHOR1,
                 EXPECTED_AUTHOR2);
 
-        Author existingAuthor = bookBeforeUpdate.getAuthors().get(0);
-        bookService.deleteBookAuthor(bookBeforeUpdate, existingAuthor);
-        assertThat(bookService.findBookByTitle(BOOK_TITLE).getAuthors())
-                .extracting(Author::getName).containsExactly(EXPECTED_AUTHOR2)
-                .doesNotContain(EXPECTED_AUTHOR1)
-                .hasSize(EXPECTED_SIZE - 1);
+        Author deleted = bookBeforeUpdate.getAuthors().get(1);
+        var bookAfterUpdate = bookService.deleteBookAuthor(bookBeforeUpdate, deleted);
+
+        assertThat(bookAfterUpdate.getAuthors())
+                .hasSize(EXPECTED_SIZE - 1)
+                .extracting(Author::getName).containsExactly(EXPECTED_AUTHOR1);
+        assertThat(em.find(Book.class, bookAfterUpdate.getId()).getAuthors())
+                .extracting(Author::getName).containsExactly(EXPECTED_AUTHOR1);
     }
 
     @Test
@@ -278,13 +359,19 @@ public class BookServiceIntegrationTest {
         final String BOOK_TITLE = "The Roadside Picnic";
         final int EXPECTED_SIZE = 1;
         final String EXPECTED_GENRE = "fantasy";
-        Book bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
+        BookDto bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
         assertThat(bookBeforeUpdate.getGenres())
                 .hasSize(EXPECTED_SIZE)
-                .extracting(Genre::getName).containsExactly(EXPECTED_GENRE);
+                .extracting(Genre::getName).containsExactlyInAnyOrder(EXPECTED_GENRE);
 
-        bookService.deleteBookGenre(bookBeforeUpdate, bookBeforeUpdate.getGenres().get(0));
-        assertThat(bookService.findBookByTitle(BOOK_TITLE).getGenres())
+        Genre deleted = bookBeforeUpdate.getGenres().get(0);
+        var bookAfterUpdate = bookService.deleteBookGenre(bookBeforeUpdate, deleted);
+
+        assertThat(bookAfterUpdate.getGenres())
+                .isEmpty();
+        assertThat(em.find(Book.class, bookAfterUpdate.getId()).getGenres())
                 .isEmpty();
     }
 
@@ -296,31 +383,59 @@ public class BookServiceIntegrationTest {
         final int EXPECTED_SIZE = 2;
         final String EXPECTED_COMMENT1 = "Greatest book ever!";
         final String EXPECTED_COMMENT2 = "I read this book as a child.";
-        Book bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
+        BookDto bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
+
         assertThat(bookBeforeUpdate.getComments())
                 .hasSize(EXPECTED_SIZE)
-                .extracting(Comment::getMessage).containsExactly(EXPECTED_COMMENT1, EXPECTED_COMMENT2);
+                .extracting(Comment::getMessage).containsExactlyInAnyOrder(EXPECTED_COMMENT1,
+                EXPECTED_COMMENT2);
 
-        bookService.deleteBookComment(bookBeforeUpdate, bookBeforeUpdate.getComments().get(0));
+        Comment oldComment = bookBeforeUpdate.getComments().get(1);
+
+        var bookAfterUpdate = bookService.deleteBookComment(bookBeforeUpdate, oldComment);
+
+        assertThat(bookAfterUpdate.getComments())
+                .hasSize(EXPECTED_SIZE - 1)
+                .extracting(Comment::getMessage).containsExactlyInAnyOrder(EXPECTED_COMMENT1);
         assertThat(bookService.findBookByTitle(BOOK_TITLE).getComments())
-                .extracting(Comment::getMessage).contains(EXPECTED_COMMENT2)
-                .doesNotContain(EXPECTED_COMMENT1)
-                .hasSize(EXPECTED_SIZE - 1);
+                .hasSize(EXPECTED_SIZE - 1)
+                .extracting(Comment::getMessage).containsExactlyInAnyOrder(EXPECTED_COMMENT1);
+        assertThat(em.find(Comment.class, oldComment.getId()))
+                .isNull();
     }
 
     @DisplayName("should delete book by id")
     @Test
     @Transactional
     void shouldDeleteBookFromLibrary() {
-        final long BOOK_ID = 5;
-        final String EXPECTED_BOOK_TITLE = "Beloved";
-        Book book = em.find(Book.class, BOOK_ID);
-        assertThat(book).isNotNull()
-                .extracting(Book::getTitle).isEqualTo(EXPECTED_BOOK_TITLE);
+        final String BOOK_TITLE = "The Roadside Picnic";
+        final int EXPECTED_SIZE = 2;
+        final String EXPECTED_COMMENT1 = "Greatest book ever!";
+        final String EXPECTED_COMMENT2 = "I read this book as a child.";
 
-        bookService.deleteBookById(BOOK_ID);
+        BookDto bookBeforeUpdate = bookService.findBookByTitle(BOOK_TITLE);
 
-        assertThat(em.find(Book.class, BOOK_ID)).isNull();
+        assertThat(em.find(Book.class, bookBeforeUpdate.getId())).isNotNull()
+                .extracting(Book::getTitle).isEqualTo(BOOK_TITLE);
+        assertThat(bookBeforeUpdate.getComments())
+                .hasSize(EXPECTED_SIZE)
+                .extracting(Comment::getMessage).containsExactlyInAnyOrder(EXPECTED_COMMENT1,
+                EXPECTED_COMMENT2);
+
+        Comment firstCommentBeforeDelete = bookBeforeUpdate.getComments().get(0);
+        Comment secondCommentBeforeDelete = bookBeforeUpdate.getComments().get(1);
+
+        assertThat(em.find(Comment.class, firstCommentBeforeDelete.getId()))
+                .isNotNull();
+        assertThat(em.find(Comment.class, secondCommentBeforeDelete.getId()))
+                .isNotNull();
+
+        bookService.deleteBookById(bookBeforeUpdate.getId());
+
+        assertThat(em.find(Book.class, bookBeforeUpdate.getId())).isNull();
+        assertThat(em.find(Comment.class, firstCommentBeforeDelete.getId())).isNull();
+        assertThat(em.find(Comment.class, secondCommentBeforeDelete.getId())).isNull();
     }
 
     @DisplayName("should correctly change book title")
@@ -331,13 +446,14 @@ public class BookServiceIntegrationTest {
         final String BOOK_TITLE = "Carrie";
         final String NEW_TITLE = "New Title";
 
-        Book bookBeforeUpdate = em.find(Book.class, BOOK_ID);
+        BookDto bookBeforeUpdate = bookService.findBookById(BOOK_ID);
         assertThat(bookBeforeUpdate.getTitle()).isEqualTo(BOOK_TITLE);
+        assertThat(em.find(Book.class, BOOK_ID).getTitle()).isEqualTo(BOOK_TITLE);
 
-        em.detach(bookBeforeUpdate);
         bookService.changeBookTitle(bookBeforeUpdate, NEW_TITLE);
 
-        Book bookAfterUpdate = em.find(Book.class, BOOK_ID);
+        BookDto bookAfterUpdate = bookService.findBookById(BOOK_ID);
         assertThat(bookAfterUpdate.getTitle()).isEqualTo(NEW_TITLE);
+        assertThat(em.find(Book.class, BOOK_ID).getTitle()).isEqualTo(NEW_TITLE);
     }
 }
